gdnative/tests/ui/export_fail_01.rs
use gdnative::prelude::*;

#[derive(Export, ToVariant)]
pub enum Foo {
    Bar(String),
}

fn main() {}
